--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,21 @@ services:
       rabbitmq-choreography:
         condition: service_healthy
 
+  payment-service-choreography:
+    build: ./payment-service
+    container_name: payment-service-choreography
+    environment:
+      RABBITMQ_USER: ${RABBITMQ_USER}
+      RABBITMQ_PASS: ${RABBITMQ_PASS}
+      RABBITMQ_HOST: ${RABBITMQ_HOST}
+      RABBITMQ_PORT: ${RABBITMQ_PORT}
+      RABBITMQ_URL: amqp://${RABBITMQ_USER}:${RABBITMQ_PASS}@${RABBITMQ_HOST}:${RABBITMQ_PORT}/
+    networks:
+      - rabbitmq_network
+    depends_on:
+      rabbitmq-choreography:
+        condition: service_healthy
+
 volumes:
   rabbitmq_data:
 
