--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build and Push
         uses: docker/build-push-action@v5
         with:
-          context: ./services/${{ matrix.service }}
+          context: ./${{ matrix.service }}
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/choreography-saga-${{ matrix.service }}:latest
